# cute-kernels

./: .clangd  .envrc  .gitignore  README.md  compile_commands.json  pixi.toml  recipe.yaml  variants.yaml
cute-gemm/: .clangd  .gitignore  CMakeLists.txt
cute-gemm/.cache/clangd/index/: gemm.cu.243FE80C65FE97FE.idx  self.cu.3CD32A09A96853FC.idx
cute-gemm/gemm/: CMakeLists.txt  blas.cu  gemm.cu  self.cu
cute-gemm/gemm/include/cutlass/util/: helper_cuda.hpp
output/bld/rattler-build_cute-kernel_1744636259/work/test/run/conda-meta/: cute-kernel-0.1.0-h47b25b4_0.json  libgcc-14.2.0-h767d61c_2.json  libgomp-14.2.0-h767d61c_2.json
output/bld/rattler-build_cute-kernel_1744636259/work/test/run/targets/x86_64-linux/lib/: libcudart.so.12  libcudart.so.12.8.90
output/bld/rattler-build_cute-kernel_1744636353/work/test/run/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  cuda-cudart_linux-64-12.8.90-h3f2d84a_1.json  cuda-version-12.8-h5d125a7_3.json  cute-kernel-0.1.0-h47b25b4_0.json  libgcc-14.2.0-h767d61c_2.json  libgomp-14.2.0-h767d61c_2.json
output/bld/rattler-build_cute-kernel_1744636353/work/test/run/lib/: libcudart.so.12.8.90
output/bld/rattler-build_cute-kernel_1744637138/work/test/run/conda-meta/: _openmp_mutex-4.5-2_gnu.json  cuda-cudart-12.8.90-h5888daf_1.json  cute-kernel-0.1.0-h47b25b4_0.json  libgcc-14.2.0-h767d61c_2.json  libstdcxx-14.2.0-h8f9b012_2.json
output/linux-64/: cute-kernel-0.1.0-h47b25b4_0.conda  repodata.json
